updated Sign In form

--- a/src/containers/Dashboard/CompanyHome/CompanyHome.scss
+++ b/src/containers/Dashboard/CompanyHome/CompanyHome.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/variables.scss";
 
+.CompaniesMainNav {
+  margin-top: 30px;
+}
+
 .HomeBlock {
   padding: 0!important;
   .HomeBlockInner {
