--- a/src/containers/Dashboard/Dashboard.scss
+++ b/src/containers/Dashboard/Dashboard.scss
@@ -1,18 +1,17 @@
 @import "../../styles/variables.scss";
 
 .CompanyDashboardNav {
-  padding: 15px 0;
+  padding-top: 0;
   border-bottom: 1px solid whiteSmoke;
   padding-bottom: 0;
-  margin-bottom: 30px;
   .CompanyDashboardNavLink {
     color: $gray-medium;
     letter-spacing: 0.5px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 300;
     text-align: center;
     text-decoration: none;
-    padding-bottom: 15px;
+    padding: 15px 0;
   }
 }
 
