--- a/src/components/SignInDialog/SignInForm.scss
+++ b/src/components/SignInDialog/SignInForm.scss
@@ -1,5 +1,20 @@
-.ButtonStyle {
-  font-weight: 100!important;
-  text-transform: capitalize!important;
-  
+@import "../../styles/variables.scss";
+
+.SignInDialogFooterLink {
+  color: $main;
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  &:first-child {
+    margin-bottom: 15px;
+  }
+}
+
+.SignInDialogFooterLinkInline {
+  color: $main;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 14px;
+  margin: 0;
+  margin-bottom: 15px;
 }
